# Ar4_driver

annin_ar4_description/meshes/ar4_camera/: Camera_fixator_Link.STL  Camera_link.STL  camera.STL  camera_fixation.STL
annin_ar4_description/meshes/ar4_gripper/: gripper_base_link.STL  gripper_jaw1_link.STL  gripper_jaw2_link.STL  gripper_jaw2_link.stl
annin_ar4_description/urdf/: ar.urdf.xacro  ar_camera_macro.xacro  ar_gazebo.urdf.xacro  ar_gripper.ros2_control.xacro  ar_gripper_macro.xacro  ar_macro.xacro
annin_ar4_driver/config/: controllers.yaml  driver.yaml
annin_ar4_driver/config/joint_offsets/: mk3.yaml
annin_ar4_driver/include/annin_ar4_driver/: ar_hardware_interface.hpp  ar_servo_gripper_hw_interface.hpp
annin_ar4_driver/scripts/: arduino_nano.py
annin_ar4_driver/src/: ar_hardware_interface.cpp  ar_servo_gripper_hw_interface.cpp  teensy_driver.cpp
annin_ar4_driver/urdf/: ar.urdf.xacro
annin_ar4_firmware/AR4_teensy/: AR4_teensy.ino  AR4_teensy41_sketch_v6.2.ino
annin_ar4_firmware/ar4_teensy/: platformio.ini
annin_ar4_firmware/ar4_teensy/src/: AR4_teensy.cpp
annin_ar4_gazebo/: CMakeLists.txt
annin_ar4_gazebo/models/aruco/: aruco.material  model.config  model.sdf
annin_ar4_gazebo/worlds/: empty.world
annin_ar4_moveit_config/config/: controllers.yaml  joint_limits.yaml
annin_ar4_moveit_config/launch/: moveit.launch.py
annin_ar4_moveit_config/rviz/: moveit.rviz
annin_ar4_moveit_config/srdf/: ar.srdf.xacro  ar_gripper_macro.srdf.xacro  ar_macro.srdf.xacro
ar4_ar_manipulator_ikfast_plugin/: CMakeLists.txt  ar4_ar_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
ar4_ar_manipulator_ikfast_plugin/src/: ar4_ar_manipulator_ikfast_moveit_plugin.cpp  ar4_ar_manipulator_ikfast_solver.cpp
ar4_highlevel_bridge/: CMakeLists.txt  package.xml
ar4_highlevel_bridge/ar4_highlevel_bridge/: gripper.py
ar4_highlevel_bridge/src/: ar4_task_server.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/annin_ar4_description/share/annin_ar4_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/annin_ar4_driver/lib/annin_ar4_driver/: reset_estop.sh  run_arduino_nano
install/annin_ar4_driver/share/annin_ar4_driver/: hardware_interface_plugin.xml  local_setup.bash  (+5 more)
log/: latest_build
point_control_pkg/: CMakeLists.txt  package.xml
point_control_pkg/scripts/: jog_servo.py  pose_commander_py.py
point_control_pkg/src/: point_control.cpp  pose_commander.cpp
src/ar4_ros_driver/point_control_pkg/: CMakeLists.txt
(+130 files in other folders)
